--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,6 @@ UserSettings
 Logs
 obj
 -W-E-S-T-D-O-J-O-.sln
-.vs/-W-E-S-T-D-O-J-O-/
+.vs/-W-E-S-T-D-O-J-O-/v16/.suo
 Assembly-CSharp.csproj
-.vs/[ W E S T D O J O ]
+.vs/[ W E S T D O J O ]/v16/.suo
